Fix: bug with 100% height, overflowed components in form

--- a/src/components/CreateTask/index.scss
+++ b/src/components/CreateTask/index.scss
@@ -1,7 +1,7 @@
 .create-task {
   padding: 24px 0;
 
-  height: 100%;
+  flex-grow: 1;
 }
 .create-task__wrapper {
   display: flex;
